# datafusion-minimal

./: Cargo.toml
src/: main.rs
