[package]
name = "datafusion-minimal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow-schema = { version = "55.0.0" }
datafusion-common = { version = "47.0.0" }
datafusion-expr = { version = "47.0.0" }
datafusion-functions = { version = "47.0.0", features = [] }
datafusion-functions-aggregate = { version = "47.0.0", features = [] }
datafusion-optimizer = { version = "47.0.0" }
datafusion-sql = { version = "47.0.0", features = [] }